correctif du wrap pour le responsive desktop

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -397,11 +397,6 @@ footer div {
     flex-wrap: wrap;
   }
 }
-@media screen and (min-width: 1024px) {
-  .menu ul {
-    flex-wrap: nowrap;
-  }
-}
 @media screen and (min-width: 768px) {
   .menu li {
     flex: 0 1 50%;
