--- a/SCSS/Layout/_menu.scss
+++ b/SCSS/Layout/_menu.scss
@@ -27,9 +27,6 @@
             display:flex;
             flex-wrap: wrap;
         }
-        @include desktopOnly{
-            flex-wrap: nowrap;
-        }
     }
     li{
         @include tabletteOnly{
